--- a/package.xml
+++ b/package.xml
@@ -9,7 +9,7 @@
   <url type="bugtracker">https://github.com/stonier/sophus/issues</url>
   <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
   <author>Hauke Strasdat</author>
-  <license>BSD</license>
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake_ros</buildtool_depend>
 
