--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>sophus</name>
-  <version>22.04.1</version>
+  <version>1.3.0</version>
   <description>
    C++ implementation of Lie Groups using Eigen.
   </description>
@@ -14,7 +14,9 @@
   <buildtool_depend>cmake</buildtool_depend>
 
   <build_depend>eigen</build_depend>
+  <build_depend>fmt</build_depend>
   <build_export_depend>eigen</build_export_depend>
+  <build_export_depend>fmt</build_export_depend>
 
   <export>
     <build_type>cmake</build_type>
